# books-store

./: README.md  db.sqlite3  manage.py  pyproject.toml
books/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_book_image.py
books_store/: asgi.py  serializer.py  settings.py  urls.py  views.py  wsgi.py
feedback_form/: apps.py  forms.py  models.py  urls.py  views.py
feedback_form/migrations/: 0001_initial.py  0002_rename_mail_feedback_email.py  0003_alter_feedback_phone.py  0004_alter_feedback_phone.py
